Added flash message notifications success and fail at login Replaced content block for body block in base.html Imported bootstrap js scripts block in base.html

--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
   Page not found
 {% endblock %}
 
-{% block page_content %}
+{% block content %}
   <h1>404 bro. Good luck next time</h1>
   <p>{{ error }}</p>
 {% endblock %}
