--- a/templates/500.html
+++ b/templates/500.html
@@ -4,7 +4,7 @@
   Internal Server Error 500
 {% endblock %}
 
-{% block page_content %}
+{% block content %}
   <h1>Error 500 bro. I'm literally dying. Don't forget me.</h1>
   <p>{{ error }}</p>
 {% endblock %}
