--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,7 +6,7 @@
 Home
 {% endblock %}
 
-{% block page_content %}
+{% block content %}
   {% if username and user_ip %}
     <h1>Hello, {{ username }}!</h1>
     <h3>Hello World in Flask! Your IP is {{ user_ip }}</h3>
