--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,5 +1,5 @@
 {% macro render_todo(todo) %}
 <tr>
-  <td>Description: {{ todo }}</td>
+  <td>Description: {{ todo.to_dict()['description'] }}</td>
 </tr>
 {% endmacro %}
