--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import "macros.html" as macros %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% from "bootstrap/form.html" import render_form %}
 
 {% block title %}
 Home
@@ -10,14 +10,18 @@ Home
   <h1>Hello, {{ username }}!</h1>
   <h3>Hello World in Flask! Your IP is {{ user_ip }}</h3>
 
-  {{ wtf.quick_form(todo_form, form_type='inline', button_map={'submit': 'primary'}) }}
+  {{ render_form(todo_form, form_type='inline', button_map={'submit': 'primary'}) }}
 
-  <table>
-    <tr>
-      <th>To-dos</th>
-    </tr>
-    {% for todo in todos %}
-      {{ macros.render_todo(todo) }}
-    {% endfor %}
+  <table class="table table-striped table-hover table-bordered mt-1">
+    <thead class="thead-dark">
+      <tr>
+        <th colspan="2">To-dos</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for todo in todos %}
+        {{ macros.render_todo(todo) }}
+      {% endfor %}
+    </tbody>
   </table>
 {% endblock %}
