--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% import "macros.html" as macros %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% from "bootstrap/form.html" import render_form %}
 
 {% block title %}
 Login
 {% endblock %}
 
 {% block content %}
-  {{ wtf.quick_form(form, form_type="horizontal", button_map={'submit': 'primary'}) }}
+  {{ render_form(form, form_type="horizontal", button_map={'submit': 'primary'}) }}
 {% endblock %}
