--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,5 +1,23 @@
 {% macro render_todo(todo) %}
 <tr>
-  <td>Description: {{ todo.to_dict()['description'] }}</td>
+  <td>
+    {{ todo.to_dict()['description'] }}
+    <form style="display:none;" class="form form-inline" style="display:inline;" action="{{ url_for('update', todo_id=todo.id)}}" method="POST">
+      <button type="submit" id="update_todo_{{ todo.id }}"></button>
+    </form>
+    {% if todo.to_dict()['done'] %}
+      <label for="update_todo_{{ todo.id }}" class="badge badge-info clickable">Done</label>
+    {% else %}
+      <label for="update_todo_{{ todo.id }}" class="badge badge-warning clickable">To-do</label>
+    {% endif %}
+  </td>
+
+  <td>
+    <form class="form form-inline" action="{{ url_for('delete', todo_id=todo.id) }}" method="POST">
+      <button class="btn btn-danger" type="submit">
+        &times;
+      </button>
+    </form>
+  </td>
 </tr>
 {% endmacro %}
