--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,34 +1,32 @@
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button"
-                    class="navbar-toggle"
-                    data-toggle="collapse"
-                    data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ url_for('index') }}">
-                <img src="{{ url_for('static', filename='images/sharingan.png') }}"
-                     style="max-width: 48px"
-                     alt="Sasuke's Mangekyou Sharingan">
-            </a>
-        </div>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="">
+    <img class="d-inline-block align-top" src="{{ url_for('static', filename='images/sharingan.png') }}" alt="Sasuke's Mangekyou Sharingan" width="30" height="30">
+    To-do Companion
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-
-                {% if current_user.is_authenticated %}
-                  <li><a href="{{ url_for('index') }}">Go to index</a></li>
-                  <li><a href="https://mgonnav.com" target="_blank">mgonnav</a></li>
-                  <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
-                {% else %}
-                  <li><a href="{{ url_for('auth.login') }}">Log in</a></li>
-                  <li><a href="{{ url_for('auth.signup') }}">Sign up</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</div>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('index') }}">Go to index</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://mgonnav.com" target="_blank">mgonnav</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">Log out</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.login') }}">Log in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign up</a>
+        </li>
+      {% endif %}
+    </ul>
+  </div>
+</nav>
