--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,5 +7,6 @@ Login
 {% endblock %}
 
 {% block content %}
+  <h1>Log in</h1>
   {{ render_form(form, form_type="horizontal", button_map={'submit': 'primary'}) }}
 {% endblock %}
