--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,14 +1,11 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="">
-    <img class="d-inline-block align-top" src="{{ url_for('static', filename='images/sharingan.png') }}" alt="Sasuke's Mangekyou Sharingan" width="30" height="30">
-    To-do Companion
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="">
+      <img class="d-inline-block align-top" src="{{ url_for('static', filename='images/sharingan.png') }}" alt="Sasuke's Mangekyou Sharingan" width="30" height="30">
+      To-do Companion
+    </a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       {% if current_user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('index') }}">Go to index</a>
@@ -27,6 +24,6 @@
           <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign up</a>
         </li>
       {% endif %}
-    </ul>
+    </div>
   </div>
 </nav>
