--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,16 +1,19 @@
+html,
 body {
-  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 
 img {
   max-width: 50px;
 }
 
-.form-control {
-  min-width: 280px;
-  max-width: 30%;
-}
-
 .clickable {
   cursor: pointer;
+}
+
+.navbar {
+  background-color: #148c6c !important;
 }
