--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,12 +1,131 @@
 {% extends "base.html" %}
 {% import "macros.html" as macros %}
-{% from "bootstrap/form.html" import render_form %}
+{% from "bootstrap/form.html" import render_field, render_form %}
 
 {% block title %}
 Login
 {% endblock %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #81e8cc;
+    }
+
+    .user_card {
+      width: 95%;
+      background-color: #fefefe;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      padding: 30px 20px;
+    }
+
+    .login_container {
+      flex-direction: column;
+      padding: 0 1rem;
+    }
+
+    .login_btn {
+      width: 100%;
+      background-image: linear-gradient(to right, #159875 0%, #1aaf86 50%, #61d4b3 100%);
+      color: #fff !important;
+      font-weight: bold;
+      flex: 1 1 auto;
+      margin: 10px;
+      text-align: center;
+      text-transform: uppercase;
+      transition: 0.5s;
+      background-size: 200% auto;
+      color: #fff;
+      border-radius: 10px;
+    }
+
+    .login_btn:hover {
+      background-position: right center;
+    }
+
+    .input-group-text {
+      background-color: #f0b71f;
+      color: #fafafa;
+    }
+
+    #planning_img_card {
+      background-image: url({{ url_for('static', filename="images/planning1.svg") }});
+      background-size: cover;
+    }
+
+    @media screen and (min-width: 0) and (max-width: 320px) {
+      #planning_img_card {
+        width: 233px;
+        height: 133px;
+      }
+    }
+    @media screen and (min-width: 321px) and (max-width: 375px) {
+      #planning_img_card {
+        width: 326px;
+        height: 186px;
+      }
+    }
+    @media screen and (min-width: 376px) and (max-width: 425px) {
+      #planning_img_card {
+        width: 372px;
+        height: 212px;
+      }
+    }
+    @media screen and (min-width: 426px) and (max-width: 767px) {
+      .login_container {flex-direction: column;}
+      #planning_img_card {
+        width: 90%;
+        height: 176px;
+      }
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 2560px) {
+      .user_card {
+        width: 720px;
+      }
+      .login_container {flex-direction: row;}
+      #planning_img_card {
+        width: 419px;
+        height: 239px;
+      }
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
-  <h1>Log in</h1>
-  {{ render_form(form, form_type="horizontal", button_map={'submit': 'primary'}) }}
+<div class="d-flex align-items-center justify-content-center h-75">
+  <div class="user_card pt-4 pb-4">
+    <div class="d-flex align-items-center justify-content-center login_container">
+      <div class="form_container">
+        <div class="mb-4">
+          <h2 id="form-title">Log in</h2>
+        </div>
+        <form class="form form-horizontal" action="{{ url_for('auth.login') }}" method="POST">
+          {{ form.csrf_token() }}
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            <input id="username" class="form-control" type="text" name="username" placeholder="Username" required>
+          </div>
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-lock"></i></span>
+            </div>
+            <input id="password" class="form-control" type="password" name="password" placeholder="Password" required>
+          </div>
+          <div class="d-flex justify-content-center mt-3 login_container">
+            <input id="submit" class="btn login_btn" type="submit" name="submit" value="Log in">
+          </div>
+        </form>
+      </div>
+      <div id="planning_img_card"></div>
+    </div>
+  </div>
+</div>
 {% endblock %}
