--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" media="all">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     {% endblock %}
   {% endblock %}
 </head>
