--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,12 +1,49 @@
 {% extends "base.html" %}
-{% import "macros.html" as macros %}
-{% from "bootstrap/form.html" import render_form %}
 
 {% block title %}
 Sign up
 {% endblock %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}" type="text/css" media="all">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}" type="text/css" media="all">
+  <style>
+    #planning_img_card {
+      background-image: url('{{ url_for('static', filename='images/planning2.svg') }}');
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
-  <h1>Register a new account</h1>
-  {{ render_form(form, form_type="horizontal", button_map={'submit': 'primary'}) }}
+  <div class="d-flex align-items-center justify-content-center h-75">
+    <div class="user_card pt-4 pb-4">
+      <div class="d-flex align-items-center justify-content-center login_container">
+        <div id="planning_img_card"></div>
+        <div class="form_container">
+          <div class="mb-4">
+            <h2 id="form-title">Register new account</h2>
+          </div>
+          <form class="form form-horizontal" action="{{ url_for('auth.signup') }}" method="POST">
+            {{ form.csrf_token() }}
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fas fa-user"></i></span>
+              </div>
+              <input id="username" class="form-control" type="text" name="username" placeholder="Username" required>
+            </div>
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+              </div>
+              <input id="password" class="form-control" type="password" name="password" placeholder="Password" required>
+            </div>
+            <div class="d-flex justify-content-center mt-3 login_container">
+              <input id="submit" class="btn login_btn" type="submit" name="submit" value="Sign up">
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
