--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,7 +24,7 @@ Login
             <h2 id="form-title">Log in</h2>
           </div>
           <form class="form form-horizontal" action="{{ url_for('auth.login') }}" method="POST">
-            {{ form.csrf_token() }}
+            {{ form.csrf_token }}
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fas fa-user"></i></span>
