--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -25,7 +25,7 @@ Sign up
             <h2 id="form-title">Register new account</h2>
           </div>
           <form class="form form-horizontal" action="{{ url_for('auth.signup') }}" method="POST">
-            {{ form.csrf_token() }}
+            {{ form.csrf_token }}
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fas fa-user"></i></span>
