--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,22 +6,30 @@
 Home
 {% endblock %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" type="text/css" media="all">
+{% endblock %}
+
 {% block content %}
-  <h1>Hello, {{ username }}!</h1>
-  <h3>Hello World in Flask! Your IP is {{ user_ip }}</h3>
+  <div id="hero" class="d-flex flex-column align-items-center mt-4">
+    <h1>Hello, {{ username }}!</h1>
+    <h3>Hello World in Flask! Your IP is {{ user_ip }}</h3>
+    {{ render_form(todo_form, form_type='inline', button_map={'submit': 'primary'}) }}
+  </div>
 
-  {{ render_form(todo_form, form_type='inline', button_map={'submit': 'primary'}) }}
-
-  <table class="table table-striped table-hover table-bordered mt-1">
-    <thead class="thead-dark">
-      <tr>
-        <th colspan="2">To-dos</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for todo in todos %}
-        {{ macros.render_todo(todo) }}
-      {% endfor %}
-    </tbody>
-  </table>
+  <div id="todo_table_container" class="mx-auto mt-4">
+    <table class="table table-striped table-hover table-bordered mt-1">
+      <thead class="thead-dark">
+        <tr>
+          <th colspan="2">To-dos</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for todo in todos %}
+          {{ macros.render_todo(todo) }}
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% endblock %}
