--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -41,6 +41,7 @@ Login
               <input id="submit" class="btn login_btn" type="submit" name="submit" value="Log in">
             </div>
           </form>
+          <a href="{{ url_for('auth.signup') }}">Don't have an account? Sign up!</a>
         </div>
         <div id="planning_img_card"></div>
       </div>
