--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,11 +18,11 @@ Sign up
 {% block content %}
   <div class="d-flex align-items-center justify-content-center h-75">
     <div class="user_card pt-4 pb-4">
-      <div class="d-flex align-items-center justify-content-center login_container">
+      <div class="d-flex align-items-center justify-content-center signup_container">
         <div id="planning_img_card"></div>
         <div class="form_container">
           <div class="mb-4">
-            <h2 id="form-title">Register new account</h2>
+            <h2 id="form-title">Register a new account</h2>
           </div>
           <form class="form form-horizontal" action="{{ url_for('auth.signup') }}" method="POST">
             {{ form.csrf_token }}
@@ -38,10 +38,11 @@ Sign up
               </div>
               <input id="password" class="form-control" type="password" name="password" placeholder="Password" required>
             </div>
-            <div class="d-flex justify-content-center mt-3 login_container">
-              <input id="submit" class="btn login_btn" type="submit" name="submit" value="Sign up">
+            <div class="d-flex justify-content-center mt-3 signup_container">
+              <input id="submit" class="btn signup_btn" type="submit" name="submit" value="Sign up">
             </div>
           </form>
+          <a href="{{ url_for('auth.login') }}">Already have an account? Log in</a>
         </div>
       </div>
     </div>
