--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,17 +12,33 @@ Home
 {% endblock %}
 
 {% block content %}
-  <div id="hero" class="d-flex flex-column align-items-center mt-4">
-    <h1>Hello, {{ username }}!</h1>
-    <h3>Hello World in Flask! Your IP is {{ user_ip }}</h3>
-    {{ render_form(todo_form, form_type='inline', button_map={'submit': 'primary'}) }}
+  <div id="hero" class="d-flex flex-column align-items-center my-4 text-center">
+    <h1><strong>Hello, {{ username }}!</strong></h1>
+    <h3>This app uses Flask! You are connected from IP {{ user_ip }}</h3>
   </div>
 
-  <div id="todo_table_container" class="mx-auto mt-4">
+  <div id="todo_table_container" class="mx-auto mt-1">
+    <form role="form" action="{{ url_for('home') }}" method="POST">
+      {{ todo_form.csrf_token }}
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span id="add_todo_icon" class="input-group-text"><i class="fas fa-pencil-alt"></i></span>
+            </div>
+            <input id="description" class="form-control" type="text" name="description" placeholder="Walk the dog" required>
+            <span class="input-group-btn">
+              <button id="add_todo_button" class="btn btn-primary" type="submit">Add to-do</button>
+            </span>
+          </div>
+        </div>
+      </div>
+    </form>
+
     <table class="table table-striped table-hover table-bordered mt-1">
       <thead class="thead-dark">
         <tr>
-          <th colspan="2">To-dos</th>
+          <th>To-dos</th>
         </tr>
       </thead>
       <tbody>
