--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,11 +4,21 @@
   {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Pikksaar's app | {% block title %}{% endblock %}</title>
+    <title>To-do Companion | {% block title %}{% endblock %}</title>
 
     {% block styles %}
       <!-- Bootstrap CSS -->
       {{ bootstrap.load_css() }}
+
+      <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='icons/apple-touch-icon.png') }}">
+      <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}">
+      <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
+      <link rel="manifest" href="{{ url_for('static', filename='icons/site.webmanifest') }}">
+      <link rel="mask-icon" href="{{ url_for('static', filename='icons/safari-pinned-tab.svg') }}" color="#5bbad5">
+      <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="msapplication-config" content="{{ url_for('static', filename='icons/browserconfig.xml') }}">
+      <meta name="theme-color" content="#ffffff">
 
       <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" media="all">
       <link rel="preconnect" href="https://fonts.gstatic.com">
