--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="">
-          <img class="d-inline-block align-top" src="{{ url_for('static', filename='images/sharingan.png') }}" alt="Sasuke's Mangekyou Sharingan" width="30" height="30">
+          <img class="d-inline-block align-top" src="{{ url_for('static', filename='images/logo.svg') }}" alt="Sasuke's Mangekyou Sharingan" width="30" height="30">
           To-do Companion
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
