--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
           <img class="d-inline-block align-top" src="{{ url_for('static', filename='images/logo.svg') }}" alt="Sasuke's Mangekyou Sharingan" width="30" height="30">
           To-do Companion
         </a>
